remove mobile background color

--- a/css/index.css
+++ b/css/index.css
@@ -383,7 +383,7 @@ body {
 /* Mobile */
 @media screen and (max-width: 480px) {
   body {
-    background-color: lightgreen;
+    /* background-color: lightgreen; */
   }
   #parkBenchPic {
     margin-left: 0px;
